--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
         </div>
         <section class="social">
           <div class="telegram">
-            <a href="https://t.me/Xa1nex_69" target="_blank"><i class='bx bxl-telegram'></i></a></i>
+            <a href="https://t.me/Xa1nex_69" target="_blank"><i class='bx bxl-telegram'></i>Telegram</a>
           </div>
           <div class="github">
-            <a href="https://github.com/Hikoro822" target="_blank"><i class='bx bxl-github'></i></a>
+            <a href="https://github.com/Hikoro822" target="_blank"><i class='bx bxl-github'></i>Github</a>
           </div>
           <div class="steam">
-            <a href="https://steamcommunity.com/profiles/76561199476344315/" target="_blank"><i
+            <a href="https://steamcommunity.com/profiles/76561199476344315/" target="_blank">Steam<i
                 class='bx bxl-steam'></i></a>
           </div>
           <div class="discord">
-            <a href="https://discord.com/users/vat_man" target="_blank"> <i class='bx bxl-discord-alt'></i></a>
+            <a href="https://discord.com/users/vat_man" target="_blank"> <i class='bx bxl-discord-alt'>Discord</i></a>
           </div>
         </section>
       </div>
