--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main class="main">
     <div class="main__container">
       <div class="main__inner">
-        <img src="public/avatar.png" class="avatar__image" alt="">
+        <img src="avatar.png" class="avatar__image" alt="">
         <div class="main__title">
           Xa1nex_69
         </div>
@@ -53,17 +53,17 @@
         </div>
         <section class="social">
           <div class="telegram">
-            <a href="https://t.me/Xa1nex_69" target="_blank"><i class='bx bxl-telegram'></i>Telegram</a>
+            <a href="https://t.me/Xa1nex_69" target="_blank"><i class='bx bxl-telegram'></i></a>
           </div>
           <div class="github">
-            <a href="https://github.com/Hikoro822" target="_blank"><i class='bx bxl-github'></i>Github</a>
+            <a href="https://github.com/Hikoro822" target="_blank"><i class='bx bxl-github'></i></a>
           </div>
           <div class="steam">
-            <a href="https://steamcommunity.com/profiles/76561199476344315/" target="_blank">Steam<i
+            <a href="https://steamcommunity.com/profiles/76561199476344315/" target="_blank"><i
                 class='bx bxl-steam'></i></a>
           </div>
           <div class="discord">
-            <a href="https://discord.com/users/vat_man" target="_blank"> <i class='bx bxl-discord-alt'>Discord</i></a>
+            <a href="https://discord.com/users/vat_man" target="_blank"> <i class='bx bxl-discord-alt'></i></a>
           </div>
         </section>
       </div>
